--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -571,6 +571,8 @@
   "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
+  "wallet.add.dialog.connect.description": "!!!Connect hardware wallet",
+  "wallet.add.dialog.connect.label": "!!!Connect",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
   "wallet.add.dialog.create.description.itn": "Shelleyウォレットを新規作成する",
   "wallet.add.dialog.create.label": "作成",
@@ -615,6 +617,8 @@
   "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
+  "wallet.connect.dialog.button.close": "!!!Cancel",
+  "wallet.connect.dialog.title": "!!!Connect hardware wallet",
   "wallet.connect.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
@@ -642,9 +646,6 @@
   "wallet.hardware.deviceStatus.verifying_transaction": "!!!Verify the transaction on your device in order to sign it",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "!!!Transaction verification and signing failed",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "!!!Transaction verified and signed",
-  "wallet.hardware.hardwareWalletTitle": "!!!Hardware wallet",
-  "wallet.hardware.ledgerWalletTitle": "!!!Ledger wallet",
-  "wallet.hardware.trezorWalletTitle": "!!!Trezor wallet",
   "wallet.import.file.dialog.buttonLabel": "ウォレットをインポートする",
   "wallet.import.file.dialog.description": "<p>この機能により、Daedalusの旧バージョン、Daedalusステータスディレクトリー、またはsecret.keyファイルからウォレットをインポートすることができます。</p> <p>各ウォレットの復元フレーズを入力せずに素早くウォレットをインポートできるほか、復元フレーズを紛失したウォレットのインポートも可能です。</p> <p>復元フレーズを紛失したウォレットをインポートした場合は、インポート後に新規ウォレットを作成してすべての資金を旧ウォレットから移し、<strong>新しいウォレットの復元フレーズを安全な場所に保管してください。</strong></p>",
   "wallet.import.file.dialog.importFromLabel": "インポート元：",
