DDW-427 Issues oon redeem rewards screen - showing loading screen on app close

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -4507,7 +4507,7 @@
         }
       },
       {
-        "defaultMessage": "!!!The selected wallet does not have sufficient ADA to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
+        "defaultMessage": "!!!The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
         "description": "walletsDropdownError for Redeem Incentivized Testnet - Step 1",
         "end": {
           "column": 3,
