--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -409,6 +409,7 @@
   "staking.redeemItnRewards.step1.descriptionItnLinkLabel": "インセンティブ付きテストネット",
   "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/ja/",
   "staking.redeemItnRewards.step1.errorMessage": "このウォレットには既定のトランザクション手数料を賄うために必要な最低額{minRewardFunds}ADAが入っていません。<span>{minRewardFunds}ADA以上</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
+  "staking.redeemItnRewards.step1.errorRestoringWallet": "このウォレットは、同期中は特典の引き換えに使用できません。",
   "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "無効な復元フレーズ",
   "staking.redeemItnRewards.step1.learnMoreLink.label": "もっと知る",
   "staking.redeemItnRewards.step1.learnMoreLink.url": "https://iohk.zendesk.com/hc/ja/articles/900001656586",
