--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -409,6 +409,7 @@
   "staking.redeemItnRewards.step1.descriptionItnLinkLabel": "Incentivized Testnet",
   "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/",
   "staking.redeemItnRewards.step1.errorMessage": "This wallet does not contain the minimum amount of {minRewardFunds} ADA which is required to cover the necessary transaction fees. Please select a wallet with <span>a minimum amount of {minRewardFunds} ADA</span> and click continue.",
+  "staking.redeemItnRewards.step1.errorRestoringWallet": "This wallet can’t be used for rewards redemption while it’s being synced.",
   "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "Invalid recovery phrase",
   "staking.redeemItnRewards.step1.learnMoreLink.label": "Learn More",
   "staking.redeemItnRewards.step1.learnMoreLink.url": "https://iohk.zendesk.com/hc/en-us/articles/900001656586",
