--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -350,7 +350,7 @@
   "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "Calculating fees",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "Cancel",
   "staking.delegationSetup.confirmation.step.dialog.confirmButtonLabel": "Confirm",
-  "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation choice to <span>[{selectedPoolTicker}]</span> stake pool for your <span>{selectedWalletName}</span> wallet by posting your delegation preferences on the Cardano blockchain.",
+  "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation choice to <span>[{selectedPoolTicker}]</span> stake pool for your <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "Fees",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "Spending password",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "Enter your password",
@@ -617,9 +617,9 @@
   "wallet.byron.notification.moveFundsDescription.line2": "You can create a {moveFundsLink} or move funds to one of your existing wallets.",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
   "wallet.byron.notification.moveFundsTitle": "Move funds from \"{activeWalletName}\"",
-  "wallet.connect.dialog.button.close": "Cancel",
-  "wallet.connect.dialog.title": "Connect hardware wallet",
-  "wallet.connect.hardwareWalletInstructions": "Follow instructions to access your wallet",
+  "wallet.connect.dialog.button.cancel": "Cancel",
+  "wallet.connect.dialog.title": "Connect a hardware wallet device",
+  "wallet.connect.dialog.instructions": "<p><b>Daedalus currently supports only Trezor Model T hardware wallet devices.</b></p><p>If you are <b>connecting your device with Daedalus for the first time</b>, please follow the instructions below.</p><p>If you have <b>already connected your device with Daedalus</b>, you don’t need to repeat this step. Just connect your device when you need to confirm a transaction.</p>",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create Shelley wallet",
   "wallet.create.dialog.hashImageStep": "Hash & Image",
@@ -638,14 +638,26 @@
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.dialog.passwordTooltip": "<b>We recommend using a password manager app</b> to manage and store your spending password. Generate a unique password using a password manager and paste it here. Passwords should never be reused.",
   "wallet.hardware.deviceStatus.connecting": "Connect your device and enter your PIN to unlock it",
-  "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your device to start the process again",
-  "wallet.hardware.deviceStatus.exporting_public_key": "Confirm exporting your public key on your device",
-  "wallet.hardware.deviceStatus.exporting_public_key_failed": "Exporting public key failed",
-  "wallet.hardware.deviceStatus.launching_cardano_app": "Launch the Cardano application on your device",
-  "wallet.hardware.deviceStatus.ready": "Device ready and waiting for commands",
-  "wallet.hardware.deviceStatus.verifying_transaction": "Verify the transaction on your device in order to sign it",
-  "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction verification and signing failed",
-  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction verified and signed",
+  "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your device to restart the process",
+  "wallet.hardware.deviceStatus.exporting_public_key": "Export the public key on your device",
+  "wallet.hardware.deviceStatus.exporting_public_key_failed": "Exporting the public key failed",
+  "wallet.hardware.deviceStatus.launching_cardano_app": "Launch Cardano application on your device",
+  "wallet.hardware.deviceStatus.ready": "Device ready",
+  "wallet.hardware.deviceStatus.verifying_transaction": "Confirm the transaction using the \"{walletName}\"\" device",
+  "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction confirmation failed",
+  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction confirmed",
+  
+
+  "wallet.hardware.deviceStatus.trezor_bridge_failure": "Trezor Bridge is not installed! {instructionsLink}",
+  "wallet.hardware.deviceStatus.trezor_bridge_failure.link.label": "Installation instructions",
+  "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
+  "wallet.hardware.deviceStatus.wrong_firmware": "Unsupported firmware! {instructionsLink}",
+  "wallet.hardware.deviceStatus.wrong_firmware.link.label": "Firmware update instructions",
+  "wallet.hardware.deviceStatus.wrong_firmware.link.url": "https://trezor.io/start/",
+  "wallet.hardware.deviceStatus.unsupported_device": "The device is not supported!",
+  "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\"\" device",
+
+
   "wallet.import.file.dialog.buttonLabel": "Import wallets",
   "wallet.import.file.dialog.description": "<p>This feature enables you to import wallets from the previous version of Daedalus, from the Daedalus state directory, or from a ‘secret.key’ file.</p> <p>It can be used to import wallets quickly without entering the wallet recovery phrase for each wallet, or to import wallets for which you have lost your wallet recovery phrase.</p> <p>After importing a wallet for which you have lost your wallet recovery phrase, please create a new wallet and transfer all funds from the old wallet to the new wallet. <strong>Keep the wallet recovery phrase for your new wallet secure.</strong></p>",
   "wallet.import.file.dialog.importFromLabel": "Import from:",
