--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -350,7 +350,7 @@
   "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "キャンセル",
   "staking.delegationSetup.confirmation.step.dialog.confirmButtonLabel": "確認",
-  "staking.delegationSetup.confirmation.step.dialog.description": "委任設定をCardanoブロックチェーンに送信して<span>{selectedWalletName}</span>ウォレットの委任先が<span>「{selectedPoolTicker}」</span>ステークプールであることを確認します。",
+  "staking.delegationSetup.confirmation.step.dialog.description": "<span>{selectedWalletName}</span>ウォレットの委任先が<span>「{selectedPoolTicker}」</span>ステークプールであることを確認してください。",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "手数料",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "送信時パスワード",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワードを入力してください",
@@ -571,8 +571,8 @@
   "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
-  "wallet.add.dialog.connect.description": "!!!Connect hardware wallet",
-  "wallet.add.dialog.connect.label": "!!!Connect",
+  "wallet.add.dialog.connect.description": "ハードウェアウォレットを接続する",
+  "wallet.add.dialog.connect.label": "接続",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
   "wallet.add.dialog.create.description.itn": "Shelleyウォレットを新規作成する",
   "wallet.add.dialog.create.label": "作成",
@@ -617,9 +617,9 @@
   "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
-  "wallet.connect.dialog.button.close": "!!!Cancel",
-  "wallet.connect.dialog.title": "!!!Connect hardware wallet",
-  "wallet.connect.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
+  "wallet.connect.dialog.button.close": "キャンセル",
+  "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
+  "wallet.connect.dialog.instructions": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b><p><p><b>デバイスを初めてDaedalusに接続する場合</b>は、以下の指示に従ってください<p><p><b>すでにDaedalusと接続したことがあるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
   "wallet.create.dialog.hashImageStep": "!!!Hash & Image",
@@ -638,14 +638,26 @@
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
   "wallet.hardware.deviceStatus.connecting": "!!!Connect your device and enter your PIN to unlock it",
-  "wallet.hardware.deviceStatus.exportingPublicKeyError": "!!!Disconnect and reconnect your device to start the process again",
-  "wallet.hardware.deviceStatus.exporting_public_key": "!!!Confirm exporting your public key on your device",
-  "wallet.hardware.deviceStatus.exporting_public_key_failed": "!!!Exporting public key failed",
-  "wallet.hardware.deviceStatus.launching_cardano_app": "!!!Launch the Cardano application on your device",
-  "wallet.hardware.deviceStatus.ready": "!!!Device ready and waiting for commands",
-  "wallet.hardware.deviceStatus.verifying_transaction": "!!!Verify the transaction on your device in order to sign it",
-  "wallet.hardware.deviceStatus.verifying_transaction_failed": "!!!Transaction verification and signing failed",
-  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "!!!Transaction verified and signed",
+  "wallet.hardware.deviceStatus.exportingPublicKeyError": "デバイスを切断して再接続し、もう一度プロセスを始めてください",
+  "wallet.hardware.deviceStatus.exporting_public_key": "デバイス上で公開鍵をエクスポートしてください",
+  "wallet.hardware.deviceStatus.exporting_public_key_failed": "公開鍵のエクスポートができません",
+  "wallet.hardware.deviceStatus.launching_cardano_app": "デバイス上でCardanoアプリケーションを起動してください",
+  "wallet.hardware.deviceStatus.ready": "デバイスの準備ができました",
+  "wallet.hardware.deviceStatus.verifying_transaction": "「{walletName}」デバイスを使ってトランザクションを確認してください",
+  "wallet.hardware.deviceStatus.verifying_transaction_failed": "デバイスの確認ができません",
+  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "トランザクションが確認されました",
+  
+
+  "wallet.hardware.deviceStatus.trezor_bridge_failure": "Trezor Bridgeがインストールされていません。{instructionsLink}",
+  "wallet.hardware.deviceStatus.trezor_bridge_failure.link.label": "インストールガイド",
+  "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
+  "wallet.hardware.deviceStatus.wrong_firmware": "サポートされていないファームウェアです。{instructionsLink}",
+  "wallet.hardware.deviceStatus.wrong_firmware.link.label": "ファームウェア更新ガイド",
+  "wallet.hardware.deviceStatus.wrong_firmware.link.url": "https://trezor.io/start/",
+  "wallet.hardware.deviceStatus.unsupported_device": "このデバイスはサポートされていません",
+  "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
+
+
   "wallet.import.file.dialog.buttonLabel": "ウォレットをインポートする",
   "wallet.import.file.dialog.description": "<p>この機能により、Daedalusの旧バージョン、Daedalusステータスディレクトリー、またはsecret.keyファイルからウォレットをインポートすることができます。</p> <p>各ウォレットの復元フレーズを入力せずに素早くウォレットをインポートできるほか、復元フレーズを紛失したウォレットのインポートも可能です。</p> <p>復元フレーズを紛失したウォレットをインポートした場合は、インポート後に新規ウォレットを作成してすべての資金を旧ウォレットから移し、<strong>新しいウォレットの復元フレーズを安全な場所に保管してください。</strong></p>",
   "wallet.import.file.dialog.importFromLabel": "インポート元：",
