--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -185,6 +185,7 @@
   "loading.screen.updatedCardanoMessage": "Cardanoノードが更新されました",
   "loading.screen.updatingCardanoMessage": "Cardanoノードを更新しています",
   "loading.screen.verifyingBlockchainMessage": "ブロックチェーンを検証しています（{verificationProgress}%完了）",
+  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
@@ -617,9 +618,9 @@
   "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
-  "wallet.connect.dialog.button.close": "キャンセル",
-  "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
+  "wallet.connect.dialog.button.cancel": "!!!Cancel",
   "wallet.connect.dialog.instructions": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b><p><p><b>デバイスを初めてDaedalusに接続する場合</b>は、以下の指示に従ってください<p><p><b>すでにDaedalusと接続したことがあるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
+  "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
   "wallet.create.dialog.hashImageStep": "!!!Hash & Image",
@@ -638,26 +639,22 @@
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
   "wallet.hardware.deviceStatus.connecting": "!!!Connect your device and enter your PIN to unlock it",
+  "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "デバイスを切断して再接続し、もう一度プロセスを始めてください",
   "wallet.hardware.deviceStatus.exporting_public_key": "デバイス上で公開鍵をエクスポートしてください",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "公開鍵のエクスポートができません",
   "wallet.hardware.deviceStatus.launching_cardano_app": "デバイス上でCardanoアプリケーションを起動してください",
   "wallet.hardware.deviceStatus.ready": "デバイスの準備ができました",
-  "wallet.hardware.deviceStatus.verifying_transaction": "「{walletName}」デバイスを使ってトランザクションを確認してください",
-  "wallet.hardware.deviceStatus.verifying_transaction_failed": "デバイスの確認ができません",
-  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "トランザクションが確認されました",
-  
-
   "wallet.hardware.deviceStatus.trezor_bridge_failure": "Trezor Bridgeがインストールされていません。{instructionsLink}",
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.label": "インストールガイド",
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
+  "wallet.hardware.deviceStatus.unsupported_device": "このデバイスはサポートされていません",
+  "wallet.hardware.deviceStatus.verifying_transaction": "「{walletName}」デバイスを使ってトランザクションを確認してください",
+  "wallet.hardware.deviceStatus.verifying_transaction_failed": "デバイスの確認ができません",
+  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "トランザクションが確認されました",
   "wallet.hardware.deviceStatus.wrong_firmware": "サポートされていないファームウェアです。{instructionsLink}",
   "wallet.hardware.deviceStatus.wrong_firmware.link.label": "ファームウェア更新ガイド",
   "wallet.hardware.deviceStatus.wrong_firmware.link.url": "https://trezor.io/start/",
-  "wallet.hardware.deviceStatus.unsupported_device": "このデバイスはサポートされていません",
-  "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
-
-
   "wallet.import.file.dialog.buttonLabel": "ウォレットをインポートする",
   "wallet.import.file.dialog.description": "<p>この機能により、Daedalusの旧バージョン、Daedalusステータスディレクトリー、またはsecret.keyファイルからウォレットをインポートすることができます。</p> <p>各ウォレットの復元フレーズを入力せずに素早くウォレットをインポートできるほか、復元フレーズを紛失したウォレットのインポートも可能です。</p> <p>復元フレーズを紛失したウォレットをインポートした場合は、インポート後に新規ウォレットを作成してすべての資金を旧ウォレットから移し、<strong>新しいウォレットの復元フレーズを安全な場所に保管してください。</strong></p>",
   "wallet.import.file.dialog.importFromLabel": "インポート元：",
